Done solving further issues with cart content popup on mobile and desktop

--- a/style/style.css
+++ b/style/style.css
@@ -72,12 +72,15 @@
   z-index: 2;
 }
 .cart-conts{
+  width:95vw;
   background-color: white;
-  padding:10px 15px 10px 15px !important;
+  padding:10px 15px 10px 15px;
+  padding-bottom:35px !important;
   margin-top:60px !important;
   border-radius:10px;
   display:none;/*This line activates or deactivates the cart contents panel*/
   position:absolute;
+  box-shadow:rgba(0, 0, 0, 0.152) 1px 8px 20px;
   z-index:5;
 }
 .cart-conts-hide{
@@ -116,7 +119,7 @@
   margin:auto !important;
 }
 .checkout-btn{
-  width:300px;
+  width:100%;
   height:50px;
   margin-top:20px;
   background-color:hsl(26, 100%, 55%);
@@ -274,7 +277,6 @@ main{
     padding:0px !important;
     padding-bottom:15px !important;
     margin:0px !important;
-    box-shadow:rgba(0, 0, 0, 0.152) 1px 8px 20px;
     position:absolute;
     right:8vw;
     top:90px;
@@ -284,6 +286,9 @@ main{
   }
   .cart-title{
     margin:0 !important;
+  }
+  .checkout-btn{
+    width:100%;
   }
   #empty-state{
     width:300px;
@@ -309,7 +314,11 @@ main{
     margin-right:auto;
   }
   .product-image-btn-container{
-    display:none;
+    display:none !important;
+    margin-top:0 !important;
+  }
+  .product-image-btn-container div{
+    display: none;
   }
   .product-o-image img{
     display:block;
